--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "license": "MIT",
   "engines" : { "node" : ">=4.1.0 <5.5.0" },
   "dependencies": {
+    "matrix-js-sdk": "",
+    "babel-runtime": "",
+    "express-mongo-sanitize": "^1.3.2",
     "body-parser": "^1.6.5",
     "express": "^4.8.5",    
     "mongodb": "^2.2.24",
